[package]
name = "kubefs"
version = "0.1.0"
authors = ["Rodrigo Valin <licorna@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.5.0"

# Inherited from fuser
libc = "0.2.51"
log = "0.4.6"
thread-scoped = "1.0.2"
users = "0.10.0"
serde = {version = "1.0.102", features = ["std", "derive"], optional = true}

# Inherited from kube
kube = { version = "0.43.0", default-features = false, features = ["rustls-tls"] }
kube-runtime = { version = "0.43.0", default-features = false, features = ["rustls-tls"] }
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_17"] }
